# dpdk-dns-server

./: .gitignore  meson.build
include/: application.h  resolver.h  server.h
src/: application.cc  resolver.cc  server.cc
